--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^1.2.5",
     "@next/font": "13.1.6",
+    "@tailwindcss/typography": "^0.5.9",
     "flowbite": "^1.6.3",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -21,6 +22,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.7"
   }
 }
