--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-tailwind/react": "^1.2.5",
     "@next/font": "13.1.6",
     "@tailwindcss/typography": "^0.5.9",
+    "classnames": "^2.3.2",
     "flowbite": "^1.6.3",
     "next": "13.1.6",
     "react": "18.2.0",
